修改定时任务bug

--- a/templates/config.html
+++ b/templates/config.html
@@ -63,6 +63,10 @@
                                 <label for="Authenticator" class="form-label">Authenticator</label>
                                 <input type="text" class="form-control" id="Authenticator" name="Authenticator" placeholder="抓包获取" required>
                             </div>
+                            <div class="mb-3">
+                                <label for="key" class="form-label">Key</label>
+                                <input type="text" class="form-control" id="key" name="key" placeholder="可选项">
+                            </div>
                             <div class="mb-4">
                                 <label for="UDPxy" class="form-label">UDPxy地址</label>
                                 <input type="text" class="form-control" id="UDPxy" name="UDPxy" placeholder="例如：http://192.168.5.1:8888" required>
